<resources>
    <string name="app_name">BankTestJava</string>
    <string name="logo_top">YOUR MONEY</string>
    <string name="logo_bottom">MATTERS</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="login_button">LOGIN</string>
    <string name="header_1">Welcome back</string>
    <string name="header_2">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_login_form">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up_login_form">Sign up</string>
    <string name="register">Register</string>
    <string name="create_new">Create your new account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="bottom_1">Already have an account?</string>
    <string name="bottom_2">Login</string>
    <string name="body_1">By signing you agree to our </string>
    <string name="body_2">terms of use</string>
    <string name="body_3">and</string>
    <string name="body_4">privacy policy.</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="profile">Profile</string>
    <string name="qr">QR</string>
    <string name="bal">AVAILABLE BALANCE</string>
    <string name="money_bal">₱ 1,290.03</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="bank">Bank</string>
    <string name="exchange">Exchange</string>
    <string name="main_header_1">Deals for you!</string>
    <string name="all">All</string>
    <string name="cashback">Cashback</string>
    <string name="loans">Loans</string>
    <string name="recent">RECENT</string>
</resources>