<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/register"
        android:textColor="@color/theme_color"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/ibBackSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="540dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_corner">

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="#455A64"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnLoginFromLogin"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_marginTop="140dp"
                android:backgroundTint="@color/theme_color"
                android:elevation="4dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/bottom_1"
                android:textColor="#455A64"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginFromLogin" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/bottom_2"
                android:textColor="#01579B"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginFromLogin" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="#455A64"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/edit_text_background"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/name"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="#455A64"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="#455A64"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/body_1"
                android:textColor="#01579B"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:text="@string/body_2"
                android:textColor="#455A64"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/body_3"
                android:textColor="#01579B"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/body_4"
                android:textColor="#455A64"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>