<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:backgroundTint="@color/cv_logo_background"
        app:cardCornerRadius="1000dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_view_border">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginBottom="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bank" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/ibBackSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="495dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_corner">

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="#455A64"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnLoginFromLogin"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_marginTop="130dp"
                android:backgroundTint="@color/theme_color"
                android:elevation="4dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_login_form"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/header_1"
                android:textColor="@color/theme_color"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_2"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:backgroundTint="@color/theme_color"
                android:buttonTint="@color/theme_color"
                android:fontFamily="sans-serif"
                android:foregroundTint="@color/theme_color"
                android:text="@string/remember_me"
                app:buttonIconTint="@color/theme_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:cursorVisible="false"
                android:fontFamily="sans-serif-black"
                android:text="@string/forgot_password"
                android:textColor="#01579B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:text="@string/no_account"
                android:textColor="#455A64"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginFromLogin" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/sign_up_login_form"
                android:textColor="#01579B"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginFromLogin" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_background"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="#455A64"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:autofillHints="" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>