<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/theme_color"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_button"
                android:textColor="#E3F2FD"
                android:textSize="16sp"
                app:cornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                app:strokeColor="@color/theme_color"
                app:strokeWidth="2dp"
                tools:ignore="TextContrastCheck" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogo"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:backgroundTint="@color/cv_logo_background"
                app:cardCornerRadius="1000dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.278">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_view_border">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bank" />

                    <TextView
                        android:id="@+id/tvLogoTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="180dp"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/logo_top"
                        android:textColor="@color/theme_color"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/tvLogoBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/logo_bottom"
                        android:textColor="@color/theme_color"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLogoTop" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:layout_marginTop="150dp"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif-black"
                android:text="@string/sign_up_button"
                android:textColor="@color/theme_color"
                android:textSize="16sp"
                app:cornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvLogo"
                app:strokeColor="@color/theme_color"
                app:strokeWidth="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>